--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 PORT=3001
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.r220rbu.mongodb.net/<dbname>?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<username>:<password>@cluster0.xxxxxxx.mongodb.net/<dbname>?retryWrites=true&w=majority
 
 # Copy this file to 'back.env' or '.env' and fill in your credentials. Do NOT commit real credentials.
