--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongoose": "^8.15.0"
+  }
+  ,
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
