--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^3.3.2"
   },
   "scripts": {
@@ -41,6 +42,8 @@
   },
   "overrides": {
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
+    "nth-check": "^2.1.1",
+    "svgo": "^2.8.0"
   }
 }
